--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "typescript": "^3.7.4",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@types/socket.io-client": "^1.4.32"
   }
 }
